added mobile responsiveness and table rows

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <body class="dark:bg-darkBlue dark:text-white font-opensans">
     <!-- Header -->
     <header
-      class="container mx-auto mt-10 px-6 text-center md:text-right md:h-40 md:h-20"
+      class="container mx-auto mt-10 px-6 text-center md:text-right md:h-20"
     >
       <!-- Dark/Light Mode Button -->
       <button
@@ -98,7 +98,7 @@
         >
           <div class="flex flex-col md:w-1/2 space-y-1">
             <label for="title" class="font-bold text-lead tracking-wide"
-              >Title</label
+              >Book</label
             >
             <input
               type="text"
@@ -135,7 +135,119 @@
             class="absolute left-7 bottom-3 text-red text-sm italic"
           ></div> -->
         </form>
+        <div class="overflow-x-hidden">
+          <table
+            class="w-full mt-6 divide-y hidden md:table dark:border-gray-800 light:border-black"
+          >
+            <thead class="text-lg mb-2">
+              <tr>
+                <th
+                  class="py-3 text-left text-xs uppercase tracking-wider font-extrabold"
+                >
+                  Name
+                </th>
+                <th
+                  class="py-3 text-left text-xs uppercase tracking-wider font-extrabold"
+                >
+                  Author
+                </th>
+                <th
+                  class="py-3 text-left text-xs uppercase tracking-wider font-extrabold"
+                >
+                  Read
+                </th>
+                <th
+                  class="py-3 text-left text-xs uppercase tracking-wider font-extrabold"
+                ></th>
+                <!-- Empty header for the remove button column -->
+              </tr>
+            </thead>
+            <tbody>
+              <!-- Example row -->
+              <tr class="border-b">
+                <td class="py-6">Lord of the Rings</td>
+                <td>Tolkien</td>
+                <td>
+                  <button
+                    class="uppercase tracking-wider text-sm border border-white px-4 py-2 rounded hover:bg-white hover:text-black hover:border-black transform transition duration-250 ease-in-out hover:scale-105"
+                  >
+                    Yes
+                  </button>
+                </td>
+                <td class="flex justify-end py-6">
+                  <button
+                    class="uppercase tracking-wider text-sm border border-white px-4 py-2 rounded hover:bg-white hover:text-black hover:border-black transform transition duration-250 ease-in-out"
+                  >
+                    Remove
+                  </button>
+                </td>
+              </tr>
+              <!-- Add more rows as needed -->
+              <tr class="border-b">
+                <td class="py-6">Cyberpunk 2077</td>
+                <td>CD Project Red</td>
+                <td>
+                  <button
+                    class="uppercase tracking-wider text-sm border border-white px-4 py-2 rounded hover:bg-white hover:text-black hover:border-black transform transition duration-250 ease-in-out hover:scale-105"
+                  >
+                    No
+                  </button>
+                </td>
+                <td class="flex justify-end py-6">
+                  <button
+                    class="uppercase tracking-wider text-sm border border-white px-4 py-2 rounded hover:bg-white hover:text-black hover:border-black transform transition duration-250 ease-in-out"
+                  >
+                    Remove
+                  </button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+
+          <!-- Mobile table -->
+          <div class="md:hidden block">
+            <div
+              class="border rounded p-4 mb-2 space-y-2 flex flex-col sm:items-center text-left mt-6"
+            >
+              <!-- this div represents a row -->
+              <div><span class="font-bold">Name: </span>Lord of the Rings</div>
+              <div><span class="font-bold">Author: </span>Tolkien</div>
+              <div><span class="font-bold">Read: </span>Yes</div>
+              <button
+                class="uppercase tracking-wider text-sm border px-4 py-2 rounded hover:bg-white hover:text-black hover:border-black transform transition duration-250 ease-in-out w-fit sm:px-12"
+              >
+                Remove
+              </button>
+            </div>
+            <div
+              class="border rounded p-4 mb-2 space-y-2 flex flex-col sm:items-center text-left mt-6"
+            >
+              <!-- this div represents a row -->
+              <div><span class="font-bold">Name: </span>Cyberpunk 2077</div>
+              <div><span class="font-bold">Author: </span>CD Project Red</div>
+              <div><span class="font-bold">Read: </span>No</div>
+              <button
+                class="uppercase tracking-wider text-sm border px-4 py-2 rounded hover:bg-white hover:text-black hover:border-black transform transition duration-250 ease-in-out w-fit sm:px-12"
+              >
+                Remove
+              </button>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+    <script>
+      document
+        .getElementById('add-book')
+        .addEventListener('click', function (event) {
+          event.preventDefault(); // prevents the form from being submitted
+
+          const title = document.getElementById('title').value;
+          const author = document.getElementById('author').value;
+
+          const bookList = document.getElementById('book-list');
+          bookList.innerHTML += `<p>${title} by ${author}</p>`;
+        });
+    </script>
   </body>
 </html>
