remove buttons hooked up to listener

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 </td>
                 <td class="flex justify-end py-6">
                   <button
-                    class="uppercase tracking-wider text-sm border border-white px-4 py-2 rounded hover:bg-white hover:text-black hover:border-black transform transition duration-250 ease-in-out"
+                    class="uppercase tracking-wider text-sm border border-white px-4 py-2 rounded hover:bg-white hover:text-black hover:border-black transform transition duration-250 ease-in-out delete"
                   >
                     Remove
                   </button>
@@ -196,7 +196,8 @@
                 </td>
                 <td class="flex justify-end py-6">
                   <button
-                    class="uppercase tracking-wider text-sm border border-white px-4 py-2 rounded hover:bg-white hover:text-black hover:border-black transform transition duration-250 ease-in-out"
+                    id="remove-book"
+                    class="uppercase tracking-wider text-sm border border-white px-4 py-2 rounded hover:bg-white hover:text-black hover:border-black transform transition duration-250 ease-in-out delete"
                   >
                     Remove
                   </button>
