--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
           </table>
 
           <!-- Mobile table -->
-          <div class="md:hidden block">
+          <div class="md:hidden block" id="mobile">
             <div
               class="border rounded p-4 mb-2 space-y-2 flex flex-col sm:items-center text-left mt-6"
             >
