--- a/index.html
+++ b/index.html
@@ -71,17 +71,18 @@
     </header>
 
     <!-- Title section -->
-    <div class="container mx-auto px-6 text-left md:pt-20 pb-36 md:text-left">
+    <div class="container mx-auto px-3 text-left md:pt-20 pb-36 md:text-left">
       <h1
         class="text-center mb-10 text-3xl font-bold leading-normal mt-2 md:text-4xl md:text-left"
       >
-        My Book Library.
+        Constraint Validation API.
       </h1>
       <p
         class="text-center mx-auto max-w-sm mb-10 text-sm md:max-w-xl md:text-xl md:text-left md:mx-0"
       >
         As part of the Odin Project curriculum, I have been tasked with creating
-        a book-tracker that uses Object-oriented programming.
+        a simple form that uses the JavaScript constraint validation API to
+        validate the form inputs.
       </p>
       <p
         class="max-w-sm mb-10 text-sm md:max-w-xl md:text-xl mx-auto text-center md:text-left md:mx-0"
@@ -89,38 +90,99 @@
         The GitHub repo can be found here.
       </p>
       <!-- Form  Container -->
-      <div class="max-w-6xl">
+      <div class="">
         <!-- Form -->
         <form
           action=""
           id="link-form"
-          class="relative flex flex-col w-full py-10 mt-20 space-y-4 bg-darkViolet rounded-lg md:flex-row md:space-y-0 md:space-x-3"
+          class="relative flex flex-col w-full py-10 mt-20 space-y-4 bg-darkViolet rounded-lg md:space-y-6"
           novalidate
         >
-          <div class="flex flex-col md:w-1/2 space-y-1">
-            <label for="title" class="font-bold text-lead tracking-wide"
-              >Book</label
-            >
-            <input
-              type="text"
-              class="dark:text-black p-3 border-2 rounded-lg placeholder-slate-200s focus:outline-none border-slate-600 dark:border-none"
-              placeholder="Book title"
-              id="title"
-              required
-            />
+          <div class="flex flex-row space-x-3 w-full">
+            <div class="flex flex-col md:w-1/3">
+              <label for="title" class="font-bold text-lead tracking-wide"
+                >Book</label
+              >
+              <input
+                type="text"
+                class="dark:text-black p-3 border-2 rounded-lg placeholder-slate-200s focus:outline-none border-slate-600 dark:border-none"
+                placeholder="Book title"
+                id="title"
+                required
+              />
+            </div>
+
+            <div class="flex flex-col space-x-3 md:w-1/3 w-full">
+              <label for="author" class="font-bold text-lead tracking-wide"
+                >Author</label
+              >
+              <input
+                type="text"
+                class="dark:text-black p-3 border-2 rounded-lg placeholder-slate-200s focus:outline-none border-slate-600 dark:border-none"
+                placeholder="Author"
+                id="author"
+                style="margin-left: 0px !important"
+                required
+              />
+            </div>
           </div>
 
-          <div class="flex flex-col md:w-1/2 space-y-1">
-            <label for="author" class="font-bold text-lead tracking-wide"
-              >Author</label
-            >
-            <input
-              type="text"
-              class="dark:text-black p-3 border-2 rounded-lg placeholder-slate-200s focus:outline-none border-slate-600 dark:border-none"
-              placeholder="Author"
-              id="author"
-              required
-            />
+          <div class="flex flex-row space-x-3 w-full">
+            <div class="flex flex-col w-full md:w-1/3">
+              <label for="title" class="font-bold text-lead tracking-wide"
+                >Book</label
+              >
+              <input
+                type="text"
+                class="dark:text-black p-3 border-2 rounded-lg placeholder-slate-200s focus:outline-none border-slate-600 dark:border-none"
+                placeholder="Book title"
+                id="title"
+                required
+              />
+            </div>
+
+            <div class="flex flex-col space-x-3 w-full md:w-1/3">
+              <label for="author" class="font-bold text-lead tracking-wide"
+                >Author</label
+              >
+              <input
+                type="text"
+                class="dark:text-black p-3 border-2 rounded-lg placeholder-slate-200s focus:outline-none border-slate-600 dark:border-none"
+                placeholder="Author"
+                style="margin-left: 0px !important"
+                id="author"
+                required
+              />
+            </div>
+          </div>
+
+          <div class="flex flex-row space-x-3">
+            <div class="flex flex-col md:w-1/3">
+              <label for="title" class="font-bold text-lead tracking-wide"
+                >Book</label
+              >
+              <input
+                type="text"
+                class="dark:text-black p-3 border-2 rounded-lg placeholder-slate-200s focus:outline-none border-slate-600 dark:border-none"
+                placeholder="Book title"
+                style="margin-left: 0px !important"
+                id="title"
+                required
+              />
+            </div>
+
+            <div class="flex flex-col md:w-1/3">
+              <label for="author" class="font-bold text-lead tracking-wide"
+                >Author</label
+              >
+              <input
+                type="text"
+                class="dark:text-black p-3 border-2 rounded-lg placeholder-slate-200s focus:outline-none border-slate-600 dark:border-none"
+                placeholder="Author"
+                id="author"
+                required
+              />
+            </div>
           </div>
 
           <button
@@ -132,12 +194,6 @@
               class="text-white text-3xl fa-solid fa-plus transition group-hover:scale-125"
             ></i>
           </button>
-
-          <!-- Error Message -->
-          <!-- <div
-            id="err-msg"
-            class="absolute left-7 bottom-3 text-red text-sm italic"
-          ></div> -->
         </form>
 
         <div
@@ -145,43 +201,6 @@
           class="text-3xl hidden"
           style="color: rgb(212, 48, 48)"
         ></div>
-
-        <div class="overflow-y-hidden">
-          <table
-            class="w-full mt-6 divide-y hidden md:table dark:border-gray-800 light:border-black"
-            id="book-table"
-          >
-            <thead class="text-lg mb-2">
-              <tr>
-                <th
-                  class="py-3 text-left text-xs uppercase tracking-wider font-extrabold"
-                >
-                  Name
-                </th>
-                <th
-                  class="py-3 text-left text-xs uppercase tracking-wider font-extrabold"
-                >
-                  Author
-                </th>
-                <th
-                  class="py-3 text-left text-xs uppercase tracking-wider font-extrabold"
-                >
-                  Read
-                </th>
-                <th
-                  class="py-3 text-left text-xs uppercase tracking-wider font-extrabold"
-                ></th>
-                <!-- Empty header for the remove button column -->
-              </tr>
-            </thead>
-            <tbody>
-              <!-- Example row -->
-            </tbody>
-          </table>
-
-          <!-- Mobile table -->
-          <div class="md:hidden block" id="mobile"></div>
-        </div>
       </div>
     </div>
   </body>
