--- a/index.html
+++ b/index.html
@@ -98,10 +98,12 @@
           class="relative flex flex-col w-full py-10 mt-20 space-y-4 bg-darkViolet rounded-lg md:space-y-6"
           novalidate
         >
-          <div class="flex flex-row space-x-3 w-full">
+          <div
+            class="flex flex-col md:flex-row md:space-x-3 w-full space-y-4 md:space-y-0"
+          >
             <div class="flex flex-col md:w-1/3">
               <label for="title" class="font-bold text-lead tracking-wide"
-                >Book</label
+                >Email</label
               >
               <input
                 type="text"
@@ -114,7 +116,7 @@
 
             <div class="flex flex-col space-x-3 md:w-1/3 w-full">
               <label for="author" class="font-bold text-lead tracking-wide"
-                >Author</label
+                >Country</label
               >
               <input
                 type="text"
@@ -127,10 +129,12 @@
             </div>
           </div>
 
-          <div class="flex flex-row space-x-3 w-full">
+          <div
+            class="flex flex-col md:flex-row md:space-x-3 w-full space-y-4 md:space-y-0"
+          >
             <div class="flex flex-col w-full md:w-1/3">
               <label for="title" class="font-bold text-lead tracking-wide"
-                >Book</label
+                >Postcode</label
               >
               <input
                 type="text"
@@ -143,7 +147,7 @@
 
             <div class="flex flex-col space-x-3 w-full md:w-1/3">
               <label for="author" class="font-bold text-lead tracking-wide"
-                >Author</label
+                >Phone no.</label
               >
               <input
                 type="text"
@@ -156,10 +160,12 @@
             </div>
           </div>
 
-          <div class="flex flex-row space-x-3">
+          <div
+            class="flex flex-col md:flex-row md:space-x-3 space-y-4 md:space-y-0"
+          >
             <div class="flex flex-col md:w-1/3">
               <label for="title" class="font-bold text-lead tracking-wide"
-                >Book</label
+                >Password</label
               >
               <input
                 type="text"
@@ -173,7 +179,7 @@
 
             <div class="flex flex-col md:w-1/3">
               <label for="author" class="font-bold text-lead tracking-wide"
-                >Author</label
+                >Confirm password</label
               >
               <input
                 type="text"
@@ -188,11 +194,9 @@
           <button
             id="add-book"
             type="submit"
-            class="flex flex-row justify-center rounded-md self-end bg-slate-600 md:rounded-full px-3 py-1.5 w-full md:w-1/12 dark:bg-slate-500 transition hover:dark:bg-slate-400 group hover:bg-slate-500"
+            class="flex flex-row justify-center rounded-md self-start bg-slate-600 md:rounded-full px-3 py-1.5 w-full md:w-1/12 dark:bg-slate-500 transition hover:dark:bg-slate-400 group hover:bg-slate-500"
           >
-            <i
-              class="text-white text-3xl fa-solid fa-plus transition group-hover:scale-125"
-            ></i>
+            Submit
           </button>
         </form>
 
