--- a/index.html
+++ b/index.html
@@ -99,17 +99,17 @@
           novalidate
         >
           <div
-            class="flex flex-col md:flex-row md:space-x-3 w-full space-y-4 md:space-y-0"
+            class="parent flex flex-col md:flex-row md:space-x-3 w-full space-y-4 md:space-y-0"
           >
             <div class="flex flex-col md:w-1/3">
-              <label for="title" class="font-bold text-lead tracking-wide"
+              <label for="email" class="font-bold text-lead tracking-wide"
                 >Email</label
               >
               <input
-                type="text"
+                type="email"
                 class="dark:text-black p-3 border-2 rounded-lg placeholder-slate-200s focus:outline-none border-slate-600 dark:border-none"
-                placeholder="Book title"
-                id="title"
+                placeholder="Email address"
+                id="email"
                 required
               />
             </div>
@@ -121,8 +121,8 @@
               <input
                 type="text"
                 class="dark:text-black p-3 border-2 rounded-lg placeholder-slate-200s focus:outline-none border-slate-600 dark:border-none"
-                placeholder="Author"
-                id="author"
+                placeholder="Country of residence"
+                id="country"
                 style="margin-left: 0px !important"
                 required
               />
@@ -130,7 +130,7 @@
           </div>
 
           <div
-            class="flex flex-col md:flex-row md:space-x-3 w-full space-y-4 md:space-y-0"
+            class="parent flex flex-col md:flex-row md:space-x-3 w-full space-y-4 md:space-y-0"
           >
             <div class="flex flex-col w-full md:w-1/3">
               <label for="title" class="font-bold text-lead tracking-wide"
@@ -139,8 +139,8 @@
               <input
                 type="text"
                 class="dark:text-black p-3 border-2 rounded-lg placeholder-slate-200s focus:outline-none border-slate-600 dark:border-none"
-                placeholder="Book title"
-                id="title"
+                placeholder="Postcode, not ZIP code like those yankees"
+                id="postcode"
                 required
               />
             </div>
@@ -152,16 +152,16 @@
               <input
                 type="text"
                 class="dark:text-black p-3 border-2 rounded-lg placeholder-slate-200s focus:outline-none border-slate-600 dark:border-none"
-                placeholder="Author"
+                placeholder="Phone number"
                 style="margin-left: 0px !important"
-                id="author"
+                id="phone-number"
                 required
               />
             </div>
           </div>
 
           <div
-            class="flex flex-col md:flex-row md:space-x-3 space-y-4 md:space-y-0"
+            class="parent flex flex-col md:flex-row md:space-x-3 space-y-4 md:space-y-0"
           >
             <div class="flex flex-col md:w-1/3">
               <label for="title" class="font-bold text-lead tracking-wide"
@@ -170,9 +170,9 @@
               <input
                 type="text"
                 class="dark:text-black p-3 border-2 rounded-lg placeholder-slate-200s focus:outline-none border-slate-600 dark:border-none"
-                placeholder="Book title"
+                placeholder="Enter password"
                 style="margin-left: 0px !important"
-                id="title"
+                id="password"
                 required
               />
             </div>
@@ -184,7 +184,7 @@
               <input
                 type="text"
                 class="dark:text-black p-3 border-2 rounded-lg placeholder-slate-200s focus:outline-none border-slate-600 dark:border-none"
-                placeholder="Author"
+                placeholder="Confirm password"
                 id="author"
                 required
               />
