--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
           novalidate
         >
           <div
-            class="parent flex flex-col md:flex-row md:space-x-3 w-full space-y-4 md:space-y-0"
+            class="flex flex-col md:flex-row md:space-x-3 w-full space-y-4 md:space-y-0"
           >
-            <div class="flex flex-col md:w-1/3">
+            <div class="parent flex flex-col md:w-1/3">
               <label for="email" class="font-bold text-lead tracking-wide"
                 >Email</label
               >
@@ -114,7 +114,7 @@
               />
             </div>
 
-            <div class="flex flex-col space-x-3 md:w-1/3 w-full">
+            <div class="parent flex flex-col space-x-3 md:w-1/3 w-full">
               <label for="author" class="font-bold text-lead tracking-wide"
                 >Country</label
               >
@@ -130,9 +130,9 @@
           </div>
 
           <div
-            class="parent flex flex-col md:flex-row md:space-x-3 w-full space-y-4 md:space-y-0"
+            class="flex flex-col md:flex-row md:space-x-3 w-full space-y-4 md:space-y-0"
           >
-            <div class="flex flex-col w-full md:w-1/3">
+            <div class="parent flex flex-col w-full md:w-1/3">
               <label for="title" class="font-bold text-lead tracking-wide"
                 >Postcode</label
               >
@@ -145,7 +145,7 @@
               />
             </div>
 
-            <div class="flex flex-col space-x-3 w-full md:w-1/3">
+            <div class="parent flex flex-col space-x-3 w-full md:w-1/3">
               <label for="author" class="font-bold text-lead tracking-wide"
                 >Phone no.</label
               >
@@ -161,9 +161,9 @@
           </div>
 
           <div
-            class="parent flex flex-col md:flex-row md:space-x-3 space-y-4 md:space-y-0"
+            class="flex flex-col md:flex-row md:space-x-3 space-y-4 md:space-y-0"
           >
-            <div class="flex flex-col md:w-1/3">
+            <div class="parent flex flex-col md:w-1/3">
               <label for="title" class="font-bold text-lead tracking-wide"
                 >Password</label
               >
@@ -177,7 +177,7 @@
               />
             </div>
 
-            <div class="flex flex-col md:w-1/3">
+            <div class="parent flex flex-col md:w-1/3">
               <label for="author" class="font-bold text-lead tracking-wide"
                 >Confirm password</label
               >
