--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             </div>
 
             <div class="parent flex flex-col space-x-3 md:w-1/3 w-full">
-              <label for="author" class="font-bold text-lead tracking-wide"
+              <label for="country" class="font-bold text-lead tracking-wide"
                 >Country</label
               >
               <input
@@ -133,7 +133,7 @@
             class="flex flex-col md:flex-row md:space-x-3 w-full space-y-4 md:space-y-0"
           >
             <div class="parent flex flex-col w-full md:w-1/3">
-              <label for="title" class="font-bold text-lead tracking-wide"
+              <label for="postcode" class="font-bold text-lead tracking-wide"
                 >Postcode</label
               >
               <input
@@ -141,20 +141,25 @@
                 class="dark:text-black p-3 border-2 rounded-lg placeholder-slate-200s focus:outline-none border-slate-600 dark:border-none"
                 placeholder="Postcode, not ZIP code like those yankees"
                 id="postcode"
+                pattern="^([A-PR-UWYZ][A-HK-Y]?[0-9][0-9A-HJKMNP-Z]?\s?[0-9][ABD-HJLNP-UW-Z]{2})$"
                 required
               />
             </div>
 
             <div class="parent flex flex-col space-x-3 w-full md:w-1/3">
-              <label for="author" class="font-bold text-lead tracking-wide"
+              <label
+                for="phone-number"
+                class="font-bold text-lead tracking-wide"
                 >Phone no.</label
               >
               <input
-                type="text"
+                type="tel"
                 class="dark:text-black p-3 border-2 rounded-lg placeholder-slate-200s focus:outline-none border-slate-600 dark:border-none"
                 placeholder="Phone number"
                 style="margin-left: 0px !important"
                 id="phone-number"
+                maxlength="13"
+                minlength="11"
                 required
               />
             </div>
@@ -168,24 +173,30 @@
                 >Password</label
               >
               <input
-                type="text"
+                type="password"
                 class="dark:text-black p-3 border-2 rounded-lg placeholder-slate-200s focus:outline-none border-slate-600 dark:border-none"
                 placeholder="Enter password"
                 style="margin-left: 0px !important"
                 id="password"
+                minlength="3"
+                maxlength="20"
                 required
               />
             </div>
 
             <div class="parent flex flex-col md:w-1/3">
-              <label for="author" class="font-bold text-lead tracking-wide"
+              <label
+                for="confirm-password"
+                class="font-bold text-lead tracking-wide"
                 >Confirm password</label
               >
               <input
-                type="text"
+                type="password"
                 class="dark:text-black p-3 border-2 rounded-lg placeholder-slate-200s focus:outline-none border-slate-600 dark:border-none"
                 placeholder="Confirm password"
-                id="author"
+                id="confirm-pasword"
+                minlength="3"
+                maxlength="20"
                 required
               />
             </div>
