validation working - modal to be fixed

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 type="password"
                 class="dark:text-black p-3 border-2 rounded-lg placeholder-slate-200s focus:outline-none border-slate-600 dark:border-none"
                 placeholder="Confirm password"
-                id="confirm-pasword"
+                id="confirm-password"
                 minlength="3"
                 maxlength="20"
                 required
@@ -210,13 +210,8 @@
             Submit
           </button>
         </form>
-
-        <div
-          id="error-message"
-          class="text-3xl hidden"
-          style="color: rgb(212, 48, 48)"
-        ></div>
       </div>
+      <div id="modal-container"></div>
     </div>
   </body>
 </html>
